syntax = "proto3";

package nibiru.perp.v2;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "nibiru/perp/v2/state.proto";

option go_package = "github.com/NibiruChain/nibiru/x/perp/v2/types";

// GenesisState defines the perp module's genesis state.
message GenesisState {
  repeated Market markets = 2 [ (gogoproto.nullable) = false ];

  repeated GenesisMarketLastVersion market_last_versions = 6 [ (gogoproto.nullable) = false ];

  repeated AMM amms = 3 [ (gogoproto.nullable) = false ];

  repeated Position positions = 4 [ (gogoproto.nullable) = false ];

  repeated ReserveSnapshot reserve_snapshots = 5
      [ (gogoproto.nullable) = false ];
}

// GenesisMarketLastVersion is the last version including pair only used for genesis
message GenesisMarketLastVersion {
  string pair = 1 [
    (gogoproto.customtype) =
        "github.com/NibiruChain/nibiru/x/common/asset.Pair",
    (gogoproto.nullable) = false
  ];

  uint64 version = 2;
}